@@ -70,3 +70,12 @@ The main bugfix was made in this series.
 	VPN and fwroute.tables fix
 	- Dont update RtSec policy when vpn user mapps was defined with "*"
 	- Force fwmark RPDB rules when enable ip route load balance
+
+22 Sep 2014
+	ndpi app fix (works on Ubuntu 12.0 or 14.0)
+	- Install from modules/tools/apps/ndpi-netfilter.patch.tar.gz
+
+09 Oct 2014
+	tfshow and shellinabox changes
+	- Set the fwguardian certificate for https shellinabox requests
+	- Open in a new window after pcap filter (tfshow)
